--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,7 +44,9 @@
     ],
     "no-use-before-define": "off",
     "react/prop-types": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "no-console": "off",
+    "@typescript-eslint/no-unused-vars": "off"
   },
   "settings": {
     "import/resolver": {
