--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/react-dom": "^16.9.8",
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
+    "axios": "^0.21.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "socket.io-client": "^3.0.1",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
@@ -47,6 +49,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6",
+    "@types/socket.io-client": "^1.4.34",
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
